--- a/backend/package.json
+++ b/backend/package.json
@@ -11,14 +11,19 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.701.0",
     "bcryptjs": "^2.4.3",
     "braintree": "^3.26.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
+    "dotenv": "^16.4.7",
     "express": "^4.21.1",
+    "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
+    "morgan": "^1.10.0",
     "mysql2": "^3.11.3",
     "nodemon": "^3.1.7",
-    "sequelize": "^6.37.4"
+    "sequelize": "^6.37.4",
+    "sib-api-v3-sdk": "^8.5.0",
+    "uuid": "^11.0.3"
   }
 }
